@@ -11,6 +11,7 @@ Package org.springframework.osgi.config
 Package org.springframework.osgi.service
 * fixed conversion of ServiceReferences in ServiceReferenceEditor
 * improved error reporting for importer and exporter listeners configured with non-existing or incorrect custom methods
+* fixed validation bug that prevent ServiceFactory beans from being exported with specified interfaces
 
 
 Changes in version 1.2.0 RC1 (2009-03-09)
